--- a/src/compiler/dune
+++ b/src/compiler/dune
@@ -1,5 +1,5 @@
 (rule
-	(deps (env_var ADD_REVISION))
+	(deps (env_var ADD_REVISION) (universe))
 	(targets version.ml)
 	(action (with-stdout-to version.ml (run ../prebuild.exe version)))
 )
